; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ypbind/extr_yp_ping.c_ypproc_domain_nonack_2_send.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ypbind/extr_yp_ping.c_ypproc_domain_nonack_2_send.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32, i32 }

@ypproc_domain_nonack_2_send.clnt_res = internal global i32 0, align 4
@YPPROC_DOMAIN_NONACK = common dso_local global i32 0, align 4
@xdr_domainname = common dso_local global i64 0, align 8
@xdr_bool = common dso_local global i64 0, align 8
@RPC_SUCCESS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @ypproc_domain_nonack_2_send to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @ypproc_domain_nonack_2_send(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.timeval, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = bitcast %struct.timeval* %6 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %7, i8 0, i64 8, i1 false)
  %8 = call i32 @memset(i8* bitcast (i32* @ypproc_domain_nonack_2_send.clnt_res to i8*), i32 0, i32 4)
  %9 = load i32*, i32** %5, align 8
  %10 = load i32, i32* @YPPROC_DOMAIN_NONACK, align 4
  %11 = load i64, i64* @xdr_domainname, align 8
  %12 = trunc i64 %11 to i32
  %13 = load i32*, i32** %4, align 8
  %14 = ptrtoint i32* %13 to i32
  %15 = load i64, i64* @xdr_bool, align 8
  %16 = trunc i64 %15 to i32
  %17 = bitcast %struct.timeval* %6 to i64*
  %18 = load i64, i64* %17, align 4
  %19 = call i64 @clnt_call(i32* %9, i32 %10, i32 %12, i32 %14, i32 %16, i32 ptrtoint (i32* @ypproc_domain_nonack_2_send.clnt_res to i32), i64 %18)
  %20 = load i64, i64* @RPC_SUCCESS, align 8
  %21 = icmp ne i64 %19, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %24

23:                                               ; preds = %2
  store i32* @ypproc_domain_nonack_2_send.clnt_res, i32** %3, align 8
  br label %24

24:                                               ; preds = %23, %22
  %25 = load i32*, i32** %3, align 8
  ret i32* %25
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @memset(i8*, i32, i32) #2

declare dso_local i64 @clnt_call(i32*, i32, i32, i32, i32, i32, i64) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
